openshift-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: memory-leak-app
  namespace: memory-leak-demo
  labels:
    app: memory-leak-app
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  to:
    kind: Service
    name: memory-leak-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
